Add sourcedirs parameter

--- a/.azure-pipelines/integration-tests.yml
+++ b/.azure-pipelines/integration-tests.yml
@@ -657,6 +657,7 @@ jobs:
     inputs:
       reports: '$(Build.SourcesDirectory)\cover\*\*\coverage.cobertura.xml'
       targetdir: '$(Build.SourcesDirectory)\coveragereport'
+      sourcedirs: '$(Build.SourcesDirectory)'
       reporttypes: 'Cobertura'
 
   - task: PublishCodeCoverageResults@1
