Fix Preprocesor definitions

--- a/src/Datadog.Trace.ClrProfiler.Native/CMakeLists.txt
+++ b/src/Datadog.Trace.ClrProfiler.Native/CMakeLists.txt
@@ -185,12 +185,12 @@ elseif(ISLINUX)
     add_compile_options(-DLINUX -Wno-pragmas)
 endif()
 if (BIT64)
-    add_compile_options(-DBIT64)
+    add_compile_options(-DBIT64 -DHOST_64BIT)
 endif()
 if (ISAMD64)
     add_compile_options(-DAMD64)
 elseif (ISX86)
-    add_compile_options(-DBX86)
+    add_compile_options(-DBX86 -DHOST_X86)
 elseif (ISARM64)
     add_compile_options(-DARM64)
 elseif (ISARM)
