adding more checks in integration tests

--- a/test/test-applications/integrations/Samples.Msmq/Samples.Msmq.csproj
+++ b/test/test-applications/integrations/Samples.Msmq/Samples.Msmq.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net452;net461</TargetFrameworks>
+    <TargetFrameworks>net452</TargetFrameworks>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
