--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -20,7 +20,7 @@
 
   <!-- StyleCop -->
   <ItemGroup>
-    <Compile Include="$(MSBuildThisFileDirectory)GlobalSuppressions.cs" Link="GlobalSuppressions.test.cs" />
+    <Compile Include="$(MSBuildThisFileDirectory)GlobalSuppressions.cs" Link="GlobalSuppressions.test.cs" Condition="'$(MSBuildProjectExtension)' == '.csproj'" />
   </ItemGroup>
   
   <ItemGroup>
