--- a/.azure-pipelines/packages.yml
+++ b/.azure-pipelines/packages.yml
@@ -185,6 +185,57 @@ stages:
     - publish: deploy/linux
       artifact: linux-alpine-packages
 
+  - job: linux_arm64_packages
+    pool: Arm64
+    workspace:
+        clean: all
+    variables:
+      tracerHome: $(System.DefaultWorkingDirectory)/src/bin/managed-publish
+
+    steps:
+
+    - task: DotNetCoreCLI@2
+      displayName: dotnet build Datadog.Trace.ClrProfiler.Managed.Loader
+      inputs:
+        command: build
+        projects: src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
+        arguments: --configuration $(buildConfiguration) /nowarn:netsdk1138
+
+    - task: DotNetCoreCLI@2
+      displayName: dotnet publish Datadog.Trace.ClrProfiler.Managed netstandard 2.0
+      inputs:
+        command: publish
+        publishWebProjects: false
+        modifyOutputPath: false
+        zipAfterPublish: false
+        projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
+        arguments: --configuration $(buildConfiguration) --framework netstandard2.0 --output $(tracerHome)/netstandard2.0
+
+    - task: DotNetCoreCLI@2
+      displayName: dotnet publish Datadog.Trace.ClrProfiler.Managed netcoreapp 3.1
+      inputs:
+        command: publish
+        publishWebProjects: false
+        modifyOutputPath: false
+        zipAfterPublish: false
+        projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
+        arguments: --configuration $(buildConfiguration) --framework netcoreapp3.1 --output $(tracerHome)/netcoreapp3.1
+
+    - task: DockerCompose@0
+      displayName: docker-compose run Profiler
+      inputs:
+        containerregistrytype: Container Registry
+        dockerComposeCommand: run -e buildConfiguration=$(buildConfiguration) Profiler
+
+    - task: DockerCompose@0
+      displayName: docker-compose run package
+      inputs:
+        containerregistrytype: Container Registry
+        dockerComposeCommand: run -e buildConfiguration=$(buildConfiguration) package.arm64
+
+    - publish: deploy/linux
+      artifact: linux-arm64-packages
+
   #### Upload artifacts to S3
 
 - stage: upload
