--- a/.azure-pipelines/runner.yml
+++ b/.azure-pipelines/runner.yml
@@ -280,6 +280,7 @@ jobs:
         $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/win-x64/home*
         $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/win-x86/home*
         $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/linux-x64/home*
+        $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/linux-arm64/home*
         $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/osx-x64/home*
 
   - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Tool
@@ -297,6 +298,10 @@ jobs:
   - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/linux-x64
     displayName: Uploading runner standalone linux-x64 artifact
     artifact: runner-standalone-linux-x64
+
+  - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/linux-arm64
+    displayName: Uploading runner standalone linux-arm64 artifact
+    artifact: runner-standalone-linux-arm64
 
   - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/osx-x64
     displayName: Uploading runner standalone osx-x64 artifact
