add condition to assembly reference

--- a/test/test-applications/integrations/Samples.FakeKudu/Samples.FakeKudu.csproj
+++ b/test/test-applications/integrations/Samples.FakeKudu/Samples.FakeKudu.csproj
@@ -4,7 +4,7 @@
     <LoadManagedProfilerFromProfilerDirectory>true</LoadManagedProfilerFromProfilerDirectory>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
     <Reference Include="System.Net.Http" />
   </ItemGroup>
 
