Add and remove Samples.Kafka to sort some guids

--- a/test/test-applications/integrations/Samples.Kafka/Samples.Kafka.csproj
+++ b/test/test-applications/integrations/Samples.Kafka/Samples.Kafka.csproj
@@ -6,6 +6,7 @@
     <!-- Required to build multiple projects with the same Configuration|Platform -->
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+    <Platforms>x64;x86;AnyCPU</Platforms>
 
   </PropertyGroup>
 
