--- a/test/test-applications/integrations/Samples.AWS.SQS/Samples.AWS.SQS.csproj
+++ b/test/test-applications/integrations/Samples.AWS.SQS/Samples.AWS.SQS.csproj
@@ -8,6 +8,7 @@
   
   <ItemGroup>
     <PackageReference Include="AWSSDK.SQS" Version="$(ApiVersion)" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Net.Requests" Version="4.3.0" />
   </ItemGroup>
 
