--- a/samples/WindowsContainer/Dockerfile
+++ b/samples/WindowsContainer/Dockerfile
@@ -6,8 +6,8 @@
 FROM mcr.microsoft.com/dotnet/aspnet:5.0-windowsservercore-ltsc2019 AS base
 WORKDIR /app
 
-ARG DD_TRACER_VERSION=1.26.3
-ENV DD_TRACER_VERSION=$DD_TRACER_VERSION
+ARG TRACER_VERSION=1.26.3
+ENV DD_TRACER_VERSION=$TRACER_VERSION
 ENV ASPNETCORE_URLS=http://*.80
 
 ENV COR_ENABLE_PROFILING="1"
