--- a/.azure-pipelines/runner.yml
+++ b/.azure-pipelines/runner.yml
@@ -2,7 +2,7 @@ trigger: none
 pr: none
 
 variables:
-  publishOutput: $(System.DefaultWorkingDirectory)/src/bin/managed-publish
+  publishOutput: $(System.DefaultWorkingDirectory)/tracer/bin/managed-publish
   dotnetCoreSdk5Version: 5.0.103
   ddApiKey: $(DD_API_KEY)
   DD_DOTNET_TRACER_MSBUILD:
@@ -34,7 +34,7 @@ jobs:
     displayName: dotnet build Datadog.Trace.ClrProfiler.Managed.Loader
     inputs:
       command: build
-      projects: src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
+      projects: tracer/src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
       arguments: --configuration Release
 
   - task: DotNetCoreCLI@2
@@ -44,7 +44,7 @@ jobs:
       publishWebProjects: false
       modifyOutputPath: false
       zipAfterPublish: false
-      projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
+      projects: tracer/src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
       arguments: --configuration Release --framework netstandard2.0 --output $(publishOutput)/netstandard2.0
 
   - task: DotNetCoreCLI@2
@@ -54,7 +54,7 @@ jobs:
       publishWebProjects: false
       modifyOutputPath: false
       zipAfterPublish: false
-      projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
+      projects: tracer/src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
       arguments: --configuration Release --framework netcoreapp3.1 --output $(publishOutput)/netcoreapp3.1
 
   - task: DockerCompose@0
@@ -63,7 +63,7 @@ jobs:
       containerregistrytype: Container Registry
       dockerComposeCommand: run -e buildConfiguration=Release Profiler
 
-  - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin/Release/x64
+  - publish: $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.ClrProfiler.Native/bin/Release/x64
     displayName: Uploading linux tracer home artifact
     artifact: linux-tracer-home
 
@@ -78,7 +78,7 @@ jobs:
     displayName: dotnet build Datadog.Trace.ClrProfiler.Managed.Loader
     inputs:
       command: build
-      projects: src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
+      projects: tracer/src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
       arguments: --configuration Release
 
   - task: DotNetCoreCLI@2
@@ -88,7 +88,7 @@ jobs:
       publishWebProjects: false
       modifyOutputPath: false
       zipAfterPublish: false
-      projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
+      projects: tracer/src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
       arguments: --configuration Release --framework netstandard2.0 --output $(publishOutput)/netstandard2.0
 
   - task: DotNetCoreCLI@2
@@ -98,7 +98,7 @@ jobs:
       publishWebProjects: false
       modifyOutputPath: false
       zipAfterPublish: false
-      projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
+      projects: tracer/src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
       arguments: --configuration Release --framework netcoreapp3.1 --output $(publishOutput)/netcoreapp3.1
 
   - task: DockerCompose@0
@@ -107,7 +107,7 @@ jobs:
       containerregistrytype: Container Registry
       dockerComposeCommand: run -e buildConfiguration=Release Profiler
 
-  - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin/Release/x64
+  - publish: $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.ClrProfiler.Native/bin/Release/x64
     artifact: linux-tracer-home_arm64
 
 - job: macos_profiler
@@ -134,15 +134,15 @@ jobs:
       configuration: Release
       arguments: /nowarn:netsdk1138
       projects: |
-        src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
+        tracer/src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
 
   - script: |
-      cd ./src/Datadog.Trace.ClrProfiler.Native
+      cd ./tracer/src/Datadog.Trace.ClrProfiler.Native
       cmake . -DCMAKE_BUILD_TYPE=Release
       make
     displayName: build_profiler
 
-  - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin
+  - publish: $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.ClrProfiler.Native/bin
     displayName: Uploading macos profiler artifact
     artifact: macos-profiler
 
@@ -169,7 +169,7 @@ jobs:
     displayName: Copying native linux binary from previous job
     inputs:
       sourceFolder: $(Pipeline.Workspace)/linux-tracer-home
-      targetFolder: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/home/linux-x64
+      targetFolder: $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/home/linux-x64
 
   - download: current
     artifact: linux-tracer-home_arm64
@@ -179,7 +179,7 @@ jobs:
     displayName: Copying native linux arm64 binary from previous job
     inputs:
       sourceFolder: $(Pipeline.Workspace)/linux-tracer-home_arm64
-      targetFolder: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/home/linux-arm64
+      targetFolder: $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/home/linux-arm64
 
   - download: current
     artifact: macos-profiler
@@ -189,7 +189,7 @@ jobs:
     displayName: Copying native macos binary from previous job
     inputs:
       sourceFolder: $(Pipeline.Workspace)/macos-profiler
-      targetFolder: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/home/osx-x64
+      targetFolder: $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/home/osx-x64
 
   # Install the tracer latest stable release to attach the profiler to the build and test steps.
   # The script exposes the required environment variables to the following steps
@@ -230,10 +230,10 @@ jobs:
       configuration: Release
       arguments: -l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
       projects: |
-        src/**/*.csproj
-        test/**/*.Tests.csproj
-        benchmarks/**/*.csproj
-        !src/Datadog.Trace.Tools.Runner/*.csproj
+        tracer/src/**/*.csproj
+        tracer/test/**/*.Tests.csproj
+        tracer/benchmarks/**/*.csproj
+        !tracer/src/Datadog.Trace.Tools.Runner/*.csproj
     env:
       DD_SERVICE: dd-trace-dotnet
 
@@ -249,7 +249,7 @@ jobs:
   - task: MSBuild@1
     displayName: tool build
     inputs:
-      solution: src/Datadog.Trace.Tools.Runner/Datadog.Trace.Tools.Runner.proj
+      solution: tracer/src/Datadog.Trace.Tools.Runner/Datadog.Trace.Tools.Runner.proj
       msbuildArguments: /t:BuildTool /l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
       maximumCpuCount: true
     env:
@@ -258,7 +258,7 @@ jobs:
   - task: MSBuild@1
     displayName: standalone build
     inputs:
-      solution: src/Datadog.Trace.Tools.Runner/Datadog.Trace.Tools.Runner.proj
+      solution: tracer/src/Datadog.Trace.Tools.Runner/Datadog.Trace.Tools.Runner.proj
       msbuildArguments: /t:BuildStandalone /l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
       maximumCpuCount: true
     env:
@@ -268,33 +268,33 @@ jobs:
     displayName: 'Remove unneeded files'
     inputs:
       Contents: |
-        $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Tool/!(*.nupkg)
-        $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/win-x64/home*
-        $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/win-x86/home*
-        $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/linux-x64/home*
-        $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/linux-arm64/home*
-        $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/osx-x64/home*
+        $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/bin/Release/Tool/!(*.nupkg)
+        $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/win-x64/home*
+        $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/win-x86/home*
+        $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/linux-x64/home*
+        $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/linux-arm64/home*
+        $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/osx-x64/home*
 
-  - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Tool
+  - publish: $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/bin/Release/Tool
     displayName: Uploading runner dotnet tool artifact
     artifact: runner-dotnet-tool
 
-  - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/win-x64
+  - publish: $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/win-x64
     displayName: Uploading runner standalone win-x64 artifact
     artifact: runner-standalone-win-x64
 
-  - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/win-x86
+  - publish: $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/win-x86
     displayName: Uploading runner standalone win-x86 artifact
     artifact: runner-standalone-win-x86
 
-  - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/linux-x64
+  - publish: $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/linux-x64
     displayName: Uploading runner standalone linux-x64 artifact
     artifact: runner-standalone-linux-x64
 
-  - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/linux-arm64
+  - publish: $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/linux-arm64
     displayName: Uploading runner standalone linux-arm64 artifact
     artifact: runner-standalone-linux-arm64
 
-  - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/osx-x64
+  - publish: $(System.DefaultWorkingDirectory)/tracer/src/Datadog.Trace.Tools.Runner/bin/Release/Console/publish/osx-x64
     displayName: Uploading runner standalone osx-x64 artifact
     artifact: runner-standalone-osx-x64
